Move all the thingsf

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,94 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>ds</display-name>
+    <servlet-name>ds</servlet-name>
+    <servlet-class>jdressel.Derporia64.servlet.ds</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ds</servlet-name>
+    <url-pattern>/ds</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>aefw</display-name>
+    <servlet-name>aefw</servlet-name>
+    <servlet-class>jdressel.Derporia64.servlet.aefw</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>aefw</servlet-name>
+    <url-pattern>/aefw</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>der</display-name>
+    <servlet-name>der</servlet-name>
+    <servlet-class>jdressel.DerporiaPrime.der</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>der</servlet-name>
+    <url-pattern>/der</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ProcessLogout</display-name>
+    <servlet-name>ProcessLogout</servlet-name>
+    <servlet-class>jdressel.DerporiaPrime.ProcessLogout</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProcessLogout</servlet-name>
+    <url-pattern>/ProcessLogout</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ProcessClaim</display-name>
+    <servlet-name>ProcessClaim</servlet-name>
+    <servlet-class>jdressel.DerporiaPrime.ProcessClaim</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProcessClaim</servlet-name>
+    <url-pattern>/ProcessClaim</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ProcessLogin</display-name>
+    <servlet-name>ProcessLogin</servlet-name>
+    <servlet-class>jdressel.DerporiaPrime.ProcessLogin</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProcessLogin</servlet-name>
+    <url-pattern>/ProcessLogin</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ProcessReset</display-name>
+    <servlet-name>ProcessReset</servlet-name>
+    <servlet-class>jdressel.DerporiaPrime.ProcessReset</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProcessReset</servlet-name>
+    <url-pattern>/ProcessReset</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>Voting</display-name>
+    <servlet-name>Voting</servlet-name>
+    <servlet-class>jdressel.DerporiaPrime.Voting</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Voting</servlet-name>
+    <url-pattern>/Voting</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ProcessVote</display-name>
+    <servlet-name>ProcessVote</servlet-name>
+    <servlet-class>jdressel.DerporiaPrime.ProcessVote</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProcessVote</servlet-name>
+    <url-pattern>/ProcessVote</url-pattern>
+  </servlet-mapping>
 </web-app>
